TSC Bar text alignment fixed according to bar width

--- a/src/assets/css/calculator.css
+++ b/src/assets/css/calculator.css
@@ -1673,15 +1673,12 @@ font-weight: 600;
 @media (max-width: 1300px) {
     .eachProgressBarDiv .compareLeftPart {
         width: 35%;
-        text-align: center;
     }
     .eachProgressBarDiv .compareRightPart {
         width: 35%;
-        text-align: center;
     }
     .eachProgressBarDiv .compareMiddlePart {
         width: 30%;
-        text-align: center;
     }
 }
 
