--- a/src/assets/css/dark-blue.css
+++ b/src/assets/css/dark-blue.css
@@ -5554,9 +5554,9 @@ background-color: #ABD5F9;
   }
   .dark-blue .compareBottomProgreesBar {
     background-color: #242629;
-    border-color: #5b5b5b;
+    border-color: #515151;
   }
   .dark-blue .compareBottomInnerProgreesBar {
-    background-color: #3c3c3c;
+    background-color: #667078;
   }
 /* Retirement Buffer CSS Ends*/
